--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#learner">Collections</a>
+					<a class="nav-link" href="#collections">Collections</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="contact.html">Contact Us</a>
@@ -41,15 +41,8 @@
 	
 		
 		<!-- Contact Us -->
-		<div class="first-contact">
-			<h1>Pia Mikaella Bainto</h1>
-			<h2><img id="phone" src="images/phone.png"> 8-6236</h2>	
-			<h3> <img id="phone" src="images/fb.png">Pia Bainto</h3>
-		</div>
-		<div class="second-contact">
-			<h1>Jury Verano</h1>
-			<h2><img id="phone" src="images/phone.png"> 8 7000</h2>	
-			<h3><img id="phone" src="images/fb.png">Jury Verano</h3>
+		<img id="contact" src="images/contact.jpg">
+	
 
 		</div>
 		
